<resources>
    <string name="app_name">DemoNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home_container">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_detail">Detail</string>
    <string name="title_update">Update</string>
</resources>