<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.demonav.ui.main.home.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fr" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.demonav.ui.main.home.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/dashboard_fr" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.demonav.ui.main.home.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/notifications_fr" />
</navigation>